--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.15.4",
-    "history": "^5.0.0",
     "craco-less": "^1.17.1",
     "dayjs": "^1.10.4",
+    "history": "^5.0.0",
     "jira-dev-tool": "1.6.59",
     "mrm-task-lint-staged": "^6.0.0",
     "qs": "^6.10.1",
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@types/qs": "^6.9.6",
+    "@welldone-software/why-did-you-render": "^6.1.4",
     "json-server": "^0.16.3",
     "prettier": "2.2.1"
   },
